// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll mount 1`] = `
Array [
  "{\\"MountCommand\\":{\\"AddMount\\":[\\"/mnt/part1\\",\\"/dev/sde1\\",\\"ext4\\",\\"rw,relatime,data=ordered\\"]}}",
]
`;

exports[`poll move 1`] = `
Array [
  "{\\"MountCommand\\":{\\"MoveMount\\":[\\"/mnt/part1a\\",\\"/dev/sde1\\",\\"ext4\\",\\"rw,relatime,data=ordered\\",\\"/mnt/part1\\"]}}",
]
`;

exports[`poll remount 1`] = `
Array [
  "{\\"MountCommand\\":{\\"ReplaceMount\\":[\\"/mnt/part1\\",\\"/dev/sde1\\",\\"ext4\\",\\"ro,relatime,data=ordered\\",\\"\\"]}}",
]
`;

exports[`poll umount 1`] = `
Array [
  "{\\"MountCommand\\":{\\"RemoveMount\\":[\\"/testPool4\\",\\"testPool4\\",\\"zfs\\",\\"rw,xattr,noacl\\"]}}",
]
`;
